# dens

./: .appveyor.yml  .appveyor.yml.in  CMakeLists.txt  README.md  config.cmake.in
.github/workflows/: ci.yml
include/dens/: CMakeLists.txt  entity.hpp  registry.hpp  system.hpp  system_group.hpp
include/dens/detail/: archetype.hpp  sign.hpp  tarray.hpp
tests/: CMakeLists.txt  dens_test.cpp
